Fixes typo in link in index file.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <menu>
         <header>
-            <a href="_index.html">Dealerdirect</a>
+            <a href="index.html">Dealerdirect</a>
         </header>
         <ul role="navigation">
             <li>
