--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+---
+---
 <!doctype html>
 <html lang="en">
 <head>
@@ -28,24 +30,17 @@
             <a href="index.html">Dealerdirect</a>
         </header>
         <ul role="navigation">
+            {% for department in site.data.members.departments %}
             <li>
-                <h2>Developers</h2>
+                <h2>{{ department.name }}</h2>
                 <ul>
-                    <li><a href="">Annie</a></li>
-                    <li><a href="">Arjan</a></li>
-                    <li><a href="">Ben</a></li>
-                    <li><a href="">Daniel</li>
-                    <li><a href="">Gert-Jan</a></li>
-                    <li><a href="">Olav</a></li>
+                    {% assign members = department.members | sort: 'name' %}
+                    {% for member in members %}
+                    <li><a href="">{{ member.name }}</a></li>
+                    {% endfor %}
                 </ul>
             </li>
-            <li>
-                <h2>Designers</h2>
-                <ul>
-                    <li><a href="">Frank</a></li>
-                    <li><a href="">Remon</a></li>
-                </ul>
-            </li>
+            {% endfor %}
         </ul>
     </menu>
 
@@ -53,50 +48,31 @@
         <header>
             <h1>Achievements</h1>
         </header>
+        {% for department in site.data.members.departments %}
         <section>
-            <div class="profile-summary profile--ben-peachey">
+            <h2>{{ department.name }}</h2>
+            {% assign members = department.members | sort: 'name' %}
+            {% for member in members %}
+
+            {% for static_file in site.static_files %}
+                {% if static_file.path == '/img/avatars/' ~ member.name  ~ '.svg'%}
+                    {% assign hasImage = true %}
+                {% endif %}
+            {% endfor %}
+
+            <div class="profile-summary">
                 <a href="_profile.html">
-                    <span class="profile-summary__icon has-image">B.M.</span>
-                    <span class="profile-summary__name">Ben Peachey</span>
+                    {% if hasImage == true %}
+                    <span class="profile-summary__icon has-image">{{ member.initials }}</span>
+                    {% else %}
+                    <span class="profile-summary__icon">{{ member.initials }}</span>
+                    {% endif %}
+                    <span class="profile-summary__name">{{ member.fullname }}</span>
                 </a>
             </div>
-            <div class="profile-summary profile--developer-name">
-                <a href="">
-                    <span class="profile-summary__icon">D.N.</span>
-                    <span class="profile-summary__name">Developer Name</span>
-                </a>
-            </div>
-            <div class="profile-summary profile--longer-developer-name">
-                <a href="">
-                    <span class="profile-summary__icon">L.D.</span>
-                    <span class="profile-summary__name">Longer Developer-Name</span>
-                </a>
-            </div>
-            <div class="profile-summary profile--A-Z">
-                <a href="">
-                    <span class="profile-summary__icon"  style="b">A.Z.</span>
-                    <span class="profile-summary__name">A-Z</span>
-                </a>
-            </div>
-            <div class="profile-summary profile--Z-A">
-                <a href="">
-                    <span class="profile-summary__icon">Z.A.</span>
-                    <span class="profile-summary__name">Z-A</span>
-                </a>
-            </div>
-            <div class="profile-summary profile--A-A">
-                <a href="">
-                    <span class="profile-summary__icon">A.A.</span>
-                    <span class="profile-summary__name">A-A</span>
-                </a>
-            </div>
-            <div class="profile-summary profile--Z-Z">
-                <a href="">
-                    <span class="profile-summary__icon">Z.Z.</span>
-                    <span class="profile-summary__name">Z-Z</span>
-                </a>
-            </div>
+            {% endfor %}
         </section>
+        {% endfor %}
     </main>
 
 <!--
